examples/rendered-istio.yaml
---
# Source: meta-chart/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-api-gateway
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "api-gateway"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
spec:
  podSelector:
    matchLabels:

      app.kubernetes.io/instance: "demo"
      app.kubernetes.io/component: "api-gateway"
  policyTypes:
    - Ingress
  ingress:
    - {}
---
# Source: meta-chart/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-frontend
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "frontend"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
spec:
  podSelector:
    matchLabels:

      app.kubernetes.io/instance: "demo"
      app.kubernetes.io/component: "frontend"
  policyTypes:
    - Ingress
  ingress:
    - {}
---
# Source: meta-chart/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-notification-worker
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "notification-worker"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
spec:
  podSelector:
    matchLabels:

      app.kubernetes.io/instance: "demo"
      app.kubernetes.io/component: "notification-worker"
  policyTypes:
    - Ingress
  ingress: []
---
# Source: meta-chart/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-order-service
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "order-service"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
spec:
  podSelector:
    matchLabels:

      app.kubernetes.io/instance: "demo"
      app.kubernetes.io/component: "order-service"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:

              app.kubernetes.io/instance: "demo"
              app.kubernetes.io/component: "api-gateway"
---
# Source: meta-chart/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-user-service
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "user-service"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
spec:
  podSelector:
    matchLabels:

      app.kubernetes.io/instance: "demo"
      app.kubernetes.io/component: "user-service"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:

              app.kubernetes.io/instance: "demo"
              app.kubernetes.io/component: "api-gateway"
---
# Source: meta-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api-gateway
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "api-gateway"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
  annotations:

    config-management/source: helm-metachart-v3
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:

    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/component: "api-gateway"
---
# Source: meta-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "frontend"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
  annotations:

    config-management/source: helm-metachart-v3
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:

    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/component: "frontend"
---
# Source: meta-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-order-service
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "order-service"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
  annotations:

    config-management/source: helm-metachart-v3
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:

    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/component: "order-service"
---
# Source: meta-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-user-service
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "user-service"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
  annotations:

    config-management/source: helm-metachart-v3
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:

    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/component: "user-service"
---
# Source: meta-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api-gateway
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "api-gateway"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
  annotations:

    config-management/source: helm-metachart-v3
spec:
  replicas: 1
  selector:
    matchLabels:

      app.kubernetes.io/instance: "demo"
      app.kubernetes.io/component: "api-gateway"
  template:
    metadata:
      labels:

        app.kubernetes.io/name: "meta-chart"
        app.kubernetes.io/instance: "demo"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/component: "api-gateway"
        app.kubernetes.io/part-of: "meta-chart"
        helm.sh/chart: "meta-chart-0.3.0"
        vkr.itmo/project: configuration-metachart
      annotations:
        checksum/config: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
    spec:
      securityContext:

        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api-gateway
          image: "registry.example.local/vkr-platform/api-gateway:dev"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:

            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
          resources:

            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: "/health"
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/ready"
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
---
# Source: meta-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-frontend
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "frontend"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
  annotations:

    config-management/source: helm-metachart-v3
spec:
  replicas: 1
  selector:
    matchLabels:

      app.kubernetes.io/instance: "demo"
      app.kubernetes.io/component: "frontend"
  template:
    metadata:
      labels:

        app.kubernetes.io/name: "meta-chart"
        app.kubernetes.io/instance: "demo"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/component: "frontend"
        app.kubernetes.io/part-of: "meta-chart"
        helm.sh/chart: "meta-chart-0.3.0"
        vkr.itmo/project: configuration-metachart
      annotations:
        checksum/config: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
    spec:
      securityContext:

        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: frontend
          image: "registry.example.local/vkr-platform/frontend:dev"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          securityContext:

            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
          resources:

            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: "/health"
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/ready"
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
---
# Source: meta-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-notification-worker
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "notification-worker"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
  annotations:

    config-management/source: helm-metachart-v3
spec:
  replicas: 1
  selector:
    matchLabels:

      app.kubernetes.io/instance: "demo"
      app.kubernetes.io/component: "notification-worker"
  template:
    metadata:
      labels:

        app.kubernetes.io/name: "meta-chart"
        app.kubernetes.io/instance: "demo"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/component: "notification-worker"
        app.kubernetes.io/part-of: "meta-chart"
        helm.sh/chart: "meta-chart-0.3.0"
        vkr.itmo/project: configuration-metachart
      annotations:
        checksum/config: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
    spec:
      securityContext:

        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: notification-worker
          image: "registry.example.local/vkr-platform/notification-worker:dev"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:

            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
          resources:

            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
# Source: meta-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-order-service
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "order-service"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
  annotations:

    config-management/source: helm-metachart-v3
spec:
  replicas: 1
  selector:
    matchLabels:

      app.kubernetes.io/instance: "demo"
      app.kubernetes.io/component: "order-service"
  template:
    metadata:
      labels:

        app.kubernetes.io/name: "meta-chart"
        app.kubernetes.io/instance: "demo"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/component: "order-service"
        app.kubernetes.io/part-of: "meta-chart"
        helm.sh/chart: "meta-chart-0.3.0"
        vkr.itmo/project: configuration-metachart
      annotations:
        checksum/config: 04d2ddb5a3f9051fb86fe216e73571b074fe81bdd772111dd6753954e7e0977e
        checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
    spec:
      securityContext:

        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: order-service
          image: "registry.example.local/vkr-platform/order-service:dev"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:

            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
          resources:

            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: "/health"
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/ready"
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
---
# Source: meta-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-user-service
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "user-service"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
  annotations:

    config-management/source: helm-metachart-v3
spec:
  replicas: 1
  selector:
    matchLabels:

      app.kubernetes.io/instance: "demo"
      app.kubernetes.io/component: "user-service"
  template:
    metadata:
      labels:

        app.kubernetes.io/name: "meta-chart"
        app.kubernetes.io/instance: "demo"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/component: "user-service"
        app.kubernetes.io/part-of: "meta-chart"
        helm.sh/chart: "meta-chart-0.3.0"
        vkr.itmo/project: configuration-metachart
      annotations:
        checksum/config: 0014ab82f877d44dddca66133e0b2c62ca9b91a10caade3d18e15a993baa0da9
        checksum/secrets: 6288d33fe09e47f8837d14dd0ef8048d03e0fb789dfa09ece732b12394f88a65
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
    spec:
      securityContext:

        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: user-service
          image: "registry.example.local/vkr-platform/user-service:dev"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:

            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
          resources:

            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: "/health"
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/ready"
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
---
# Source: meta-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-api-gateway
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "api-gateway"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
  annotations:

    config-management/source: helm-metachart-v3
spec:
  ingressClassName: nginx
  rules:
    - host: "api.dev.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-api-gateway
                port:
                  number: 80
---
# Source: meta-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-frontend
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "frontend"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
  annotations:

    config-management/source: helm-metachart-v3
spec:
  ingressClassName: nginx
  rules:
    - host: "frontend.dev.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-frontend
                port:
                  number: 80
---
# Source: meta-chart/templates/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: demo-api-gateway
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "api-gateway"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
spec:
  host: "demo-api-gateway.demo-dev.svc.cluster.local"
  trafficPolicy:

    loadBalancer:
      simple: ROUND_ROBIN
---
# Source: meta-chart/templates/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo-public-gateway
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "istio-gateway"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
spec:
  selector:

    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:

        - api.mesh.local
---
# Source: meta-chart/templates/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-api-gateway
  namespace: demo-dev
  labels:

    app.kubernetes.io/name: "meta-chart"
    app.kubernetes.io/instance: "demo"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: "api-gateway"
    app.kubernetes.io/part-of: "meta-chart"
    helm.sh/chart: "meta-chart-0.3.0"
    vkr.itmo/project: configuration-metachart
spec:
  hosts:

    - api.mesh.local
  gateways:
    - demo-public-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: "demo-api-gateway.demo-dev.svc.cluster.local"
            port:
              number: 80
